Add edit album component to let admin edit the album aby clicking on update button and reflect the changes on the next page

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -22,7 +22,11 @@
         <br>
         <textarea #newDescription></textarea>
       </div>
-    <button (click)="submitForm(newTitle.value, newArtist.value, newDescription.value)">Add</button>
+      <button (click)="submitForm(newTitle.value, newArtist.value, newDescription.value); newTitle.value=''; newArtist.value=''; newDescription.value=''">Add</button>
     </div>
   </div>
+</div>
+
+<div>
+  <app-marketplace></app-marketplace>
 </div>
