--- a/src/app/edit-album/edit-album.component.html
+++ b/src/app/edit-album/edit-album.component.html
@@ -10,6 +10,11 @@
 
 <label>New Album Description:</label>
 <input [(ngModel)]="selectedAlbum.description">
+<br>
+
+<label>New Album Image:</label>
+<input [(ngModel)]="selectedAlbum.image">
+<br>
 
 <button (click)="beginUpdatingAlbum(selectedAlbum)">Update</button>
 <hr>
