--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -2,7 +2,9 @@
 
 <div *ngFor="let album of albums | async"  class="panel panel-default">
   <div class="panel-body">
+    <img src="{{album.image}}" alt="">
     <h3 (click)="goToDetailPage(album)" ><em>{{album.title}}</em> by {{album.artist}}</h3>
+
     <div *ngIf="currentRoute === '/admin'">
       {{album.description}}
       <hr>
