--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,14 @@
-<h2>
-  Welcome to our store!!
-</h2>
+<div class="row">
+  <div class="col-md-3">
+    <img src="/assets/images/beyonce.jpg" alt="beyonce">
+  </div>
+  <div class="col-md-3">
+    <img src="/assets/images/mick.jpg" alt="mick">
+  </div>
+  <div class="col-md-3">
+    <img src="/assets/images/mj.jpg" alt="mj">
+  </div>
+  <div class="col-md-3">
+    <img src="/assets/images/rihanna.png" alt="rihanna">
+  </div>
+</div>
