--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,17 @@
 }
 
 nav {
-  background-color: #020100;
+  background-color: red;
+  font-size: 20px;
   color: white;
+}
+
+.navbar-default a {
+  color: white !important;
+}
+
+img{
+  margin-right: 10px;
+  height: 50px;
+  width: 50px;
 }
