--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="marketplace">Marketplace</a></li>
       <li><a routerLink="admin">Admin</a></li>
+      <li><img src="./assets/images/cart.png"></li>
     </ul>
   </div>
 </nav>
