--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -1,18 +1,19 @@
 <h2>Marketplace</h2>
-
-<div *ngFor="let album of albums | async"  class="record">
-    <div class="record-info-wrapper" (click)="goToDetailPage(album)" >
-    <img src="{{album.image}}" alt="">
-    <div class="hover-info">
-      <div class="text">
-        <strong>{{album.artist}}</strong><br>
-        <span>{{album.title}}</span>
+<div class="records">
+  <div *ngFor="let album of albums | async"  class="record">
+      <div class="record-info-wrapper" (click)="goToDetailPage(album)" >
+      <img src="{{album.image}}" alt="">
+      <div class="hover-info">
+        <div class="text">
+          <strong>{{album.artist}}</strong><br>
+          <span>{{album.title}}</span>
+        </div>
       </div>
-    </div>
-
+</div>
 </div>
 <div *ngIf="currentRoute === '/admin'">
-  
+
   <hr>
   <app-edit-album [selectedAlbum]="album"></app-edit-album>
+</div>
 </div>
