--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -1,5 +1,24 @@
 <h2>Marketplace</h2>
-<div class="records">
+
+<div *ngIf ="currentRoute ==='/marketplace'" >
+  <div class="records">
+    <div *ngFor="let album of albums | async" class="record">
+      <div class="record-info-wrapper" (click)="goToDetailPage(album)">
+        <img src="{{album.image}}" alt="album-image">
+        <div class="hover-info">
+          <div class="text">
+            <strong>{{album.artist}}</strong> <br>
+            <span>{{album.title}}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div *ngIf="currentRoute === '/admin'">
+  <div class="records" class="col-md-6">
   <div *ngFor="let album of albums | async"  class="record">
       <div class="record-info-wrapper" (click)="goToDetailPage(album)" >
       <img src="{{album.image}}" alt="">
@@ -9,11 +28,10 @@
           <span>{{album.title}}</span>
         </div>
       </div>
-</div>
-</div>
-<div *ngIf="currentRoute === '/admin'">
-
-  <hr>
-  <app-edit-album [selectedAlbum]="album"></app-edit-album>
-</div>
+  </div>
+  <div *ngIf="currentRoute === '/admin'" class="col-md-6">
+    <app-edit-album [selectedAlbum]="album"></app-edit-album>
+  </div>
+  </div>
+  </div>
 </div>
