Add styling and genre pipe to album store

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
   <router-outlet></router-outlet>
 </div>
 
+<br>
+
+<div class="footer"><p><strong>&copy; 2017 Sowmya Dinavahi</strong><p></div>
 <!-- <footer class="footer">
   <div class="container">
     <a class="text-muted" routerLink="admin">Admin</a>
