--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,3 +22,14 @@ img{
   height: 50px;
   width: 50px;
 }
+
+
+.footer {
+  position: relative;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: red;
+  text-align: center;
+}
